# cognitive-cybernetics-fc-sim

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: main.yaml
docs/: EXPERIMENT_TECH_NOTE.md  diagram.mmd
scripts/: compose_all.sh  run_all.sh
src/: cli.py
src/analysis/: plots.py  summaries.py
src/controllers/: cpg.py  lqr.py  pid.py
src/data/: crossref_utils.py  openalex_seed.py
src/sim/: core.py  policies.py
src/utils/: io.py
tests/: test_cli.py  test_pid.py  test_sim.py
